# optsuite-crew-pairing

./: .env_skeleton  .gitignore  README.md
input/example/: legs.csv
vqaopt-impl-acp/: README.md  pyproject.toml
vqaopt-impl-acp/src/vqaopt/impl/acp/: __init__.py  acp_problem.py
vqaopt-impl-acp/src/vqaopt/impl/acp/cost_model/: __init__.py  acp_cost_example.py  cost_model.py
vqaopt-impl-acp/src/vqaopt/impl/acp/data_model/: __init__.py  duty.py  duty_generation.py  leg.py  pairing.py  pairing_generation.py
vqaopt-impl-acp/src/vqaopt/impl/acp/loader/: __init__.py  load_acp.py  load_acp_csv.py  load_example.py
vqaopt-impl-acp/src/vqaopt/impl/acp/reduction/: __init__.py  red_acp.py
vqaopt-impl-acp/src/vqaopt/impl/acp/resproc/: __init__.py  res_pairings.py
vqaopt-impl-acp/src/vqaopt/impl/acp/rule/: __init__.py  rule.py  rule_checker.py  rules.py
vqaopt-impl-acp/src/vqaopt/impl/acp/utils/: __init__.py  reader.py
